# kyleManagement/src/main/java/com/kylemanagement/controller/AuthController.java
@@ -1,41 +1,41 @@
-package com.kylemanagement.controller;
-
-import com.kylemanagement.repository.UserRepository;
-import com.kylemanagement.dto.RegisterDto;
-import com.kylemanagement.model.User;
-import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-@RestController
-@RequiredArgsConstructor
-@RequestMapping("/auth")
-public class AuthController {
-
-    final AuthenticationManager authenticationManager;
-    final UserRepository userRepository;
-    final PasswordEncoder passwordEncoder;
-
-    @PostMapping("/register")
-    public ResponseEntity<String> register(@RequestBody RegisterDto registerDto) {
-        if (userRepository.existsByLogin(registerDto.getUsername())) {
-            return new ResponseEntity<>("Username is taken!", HttpStatus.BAD_REQUEST);
-        }
-
-        User user = new User();
-        user.setLogin(registerDto.getUsername());
-        user.setPassword(passwordEncoder.encode(registerDto.getPassword()));
-        user.setActive(true);
-        user.setRights("USER");
-
-        userRepository.save(user);
-
-        return new ResponseEntity<>("User registered succes", HttpStatus.OK);
-    }
-}
+//package com.kylemanagement.controller;
+//
+//import com.kylemanagement.repository.UserRepository;
+//import com.kylemanagement.dto.RegisterDto;
+//import com.kylemanagement.model.User;
+//import lombok.RequiredArgsConstructor;
+//import org.springframework.http.HttpStatus;
+//import org.springframework.http.ResponseEntity;
+//import org.springframework.security.authentication.AuthenticationManager;
+//import org.springframework.security.crypto.password.PasswordEncoder;
+//import org.springframework.web.bind.annotation.PostMapping;
+//import org.springframework.web.bind.annotation.RequestBody;
+//import org.springframework.web.bind.annotation.RequestMapping;
+//import org.springframework.web.bind.annotation.RestController;
+//
+//@RestController
+//@RequiredArgsConstructor
+//@RequestMapping("/auth")
+//public class AuthController {
+//
+//    final AuthenticationManager authenticationManager;
+//    final UserRepository userRepository;
+//    final PasswordEncoder passwordEncoder;
+//
+//    @PostMapping("/register")
+//    public ResponseEntity<String> register(@RequestBody RegisterDto registerDto) {
+//        if (userRepository.existsByLogin(registerDto.getUsername())) {
+//            return new ResponseEntity<>("Username is taken!", HttpStatus.BAD_REQUEST);
+//        }
+//
+//        User user = new User();
+//        user.setLogin(registerDto.getUsername());
+//        user.setPassword(passwordEncoder.encode(registerDto.getPassword()));
+//        user.setActive(true);
+//        user.setRights("USER");
+//
+//        userRepository.save(user);
+//
+//        return new ResponseEntity<>("User registered succes", HttpStatus.OK);
+//    }
+//}
